--- a/src/tailw.css
+++ b/src/tailw.css
@@ -554,8 +554,48 @@ video {
   --tw-contain-style:  ;
 }
 
+.absolute {
+  position: absolute;
+}
+
+.relative {
+  position: relative;
+}
+
+.right-0 {
+  right: 0px;
+}
+
+.top-\[15vh\] {
+  top: 15vh;
+}
+
+.top-auto {
+  top: auto;
+}
+
+.bottom-auto {
+  bottom: auto;
+}
+
+.top-2 {
+  top: 0.5rem;
+}
+
+.bottom-0 {
+  bottom: 0px;
+}
+
 .ml-\[5\%\] {
   margin-left: 5%;
+}
+
+.mr-5 {
+  margin-right: 1.25rem;
+}
+
+.mt-5 {
+  margin-top: 1.25rem;
 }
 
 .inline {
@@ -570,6 +610,10 @@ video {
   display: inline-flex;
 }
 
+.grid {
+  display: grid;
+}
+
 .h-1\/2 {
   height: 50%;
 }
@@ -578,36 +622,124 @@ video {
   height: 15vh;
 }
 
+.h-\[200vh\] {
+  height: 200vh;
+}
+
+.h-\[400px\] {
+  height: 400px;
+}
+
 .h-full {
   height: 100%;
 }
 
-.h-screen {
-  height: 100vh;
+.h-5 {
+  height: 1.25rem;
+}
+
+.h-10 {
+  height: 2.5rem;
+}
+
+.h-\[55\%\] {
+  height: 55%;
+}
+
+.min-h-\[85vh\] {
+  min-height: 85vh;
 }
 
 .w-\[15\%\] {
   width: 15%;
 }
 
+.w-\[300px\] {
+  width: 300px;
+}
+
 .w-\[70\%\] {
   width: 70%;
+}
+
+.w-\[90\%\] {
+  width: 90%;
 }
 
 .w-full {
   width: 100%;
 }
 
+.w-5 {
+  width: 1.25rem;
+}
+
+.w-10 {
+  width: 2.5rem;
+}
+
+.w-1\/2 {
+  width: 50%;
+}
+
+.w-1\/12 {
+  width: 8.333333%;
+}
+
+.w-2\/12 {
+  width: 16.666667%;
+}
+
+.w-\[calc\(1\/8\)\] {
+  width: calc(1 / 8);
+}
+
+.w-\[1\/8\] {
+  width: 1/8;
+}
+
+.w-\[eval\(1\/8\)\] {
+  width: eval(1/8);
+}
+
+.w-\[10\%\] {
+  width: 10%;
+}
+
 .cursor-pointer {
   cursor: pointer;
+}
+
+.grid-cols-4 {
+  grid-template-columns: repeat(4, minmax(0, 1fr));
+}
+
+.grid-rows-2 {
+  grid-template-rows: repeat(2, minmax(0, 1fr));
+}
+
+.flex-col {
+  flex-direction: column;
 }
 
 .items-center {
   align-items: center;
 }
 
+.justify-center {
+  justify-content: center;
+}
+
 .justify-between {
   justify-content: space-between;
+}
+
+.gap-5 {
+  gap: 1.25rem;
+}
+
+.overflow-hidden {
+  overflow: hidden;
 }
 
 .rounded-full {
@@ -635,6 +767,24 @@ video {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
+.bg-red-600 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(220 38 38 / var(--tw-bg-opacity));
+}
+
+.bg-red-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(239 68 68 / var(--tw-bg-opacity));
+}
+
+.bg-\[--w-cyan\] {
+  background-color: var(--w-cyan);
+}
+
+.p-10 {
+  padding: 2.5rem;
+}
+
 .p-2 {
   padding: 0.5rem;
 }
@@ -645,6 +795,26 @@ video {
 
 .p-4 {
   padding: 1rem;
+}
+
+.pr-12 {
+  padding-right: 3rem;
+}
+
+.pr-5 {
+  padding-right: 1.25rem;
+}
+
+.pr-\[20\%\] {
+  padding-right: 20%;
+}
+
+.pr-\[10\%\] {
+  padding-right: 10%;
+}
+
+.pr-\[8\%\] {
+  padding-right: 8%;
 }
 
 .text-center {
@@ -669,6 +839,10 @@ video {
   transition-duration: 500ms;
 }
 
+.\[row-gap\:20px\] {
+  row-gap: 20px;
+}
+
 :root {
   --w-cyan: #66fcf1;
   --w-shade-cyan: #45a29e;
@@ -683,6 +857,26 @@ video {
 
 .placeholder\:text-\[--w-clayblack\]::placeholder {
   color: var(--w-clayblack);
+}
+
+.hover\:w-2\/5:hover {
+  width: 40%;
+}
+
+.hover\:w-1\/5:hover {
+  width: 20%;
+}
+
+.hover\:w-2\/12:hover {
+  width: 16.666667%;
+}
+
+.hover\:w-\[10\%\]:hover {
+  width: 10%;
+}
+
+.hover\:w-1\/6:hover {
+  width: 16.666667%;
 }
 
 .hover\:bg-\[rgba\(102\2c 252\2c 241\2c 0\.8\)\]:hover {
