--- a/src/tailw.css
+++ b/src/tailw.css
@@ -587,6 +587,10 @@ video {
   margin-top: 1.25rem;
 }
 
+.mb-10 {
+  margin-bottom: 2.5rem;
+}
+
 .inline {
   display: inline;
 }
@@ -607,6 +611,14 @@ video {
   height: 50%;
 }
 
+.h-4 {
+  height: 1rem;
+}
+
+.h-5 {
+  height: 1.25rem;
+}
+
 .h-\[150vh\] {
   height: 150vh;
 }
@@ -623,12 +635,41 @@ video {
   height: 100%;
 }
 
+.h-16 {
+  height: 4rem;
+}
+
+.h-32 {
+  height: 8rem;
+}
+
+.h-fit {
+  height: -moz-fit-content;
+  height: fit-content;
+}
+
+.h-auto {
+  height: auto;
+}
+
 .min-h-\[85vh\] {
   min-height: 85vh;
 }
 
+.min-h-\[100vh\] {
+  min-height: 100vh;
+}
+
+.w-4 {
+  width: 1rem;
+}
+
 .w-4\/5 {
   width: 80%;
+}
+
+.w-5 {
+  width: 1.25rem;
 }
 
 .w-\[10\%\] {
@@ -651,6 +692,19 @@ video {
   width: 100%;
 }
 
+.w-16 {
+  width: 4rem;
+}
+
+.w-32 {
+  width: 8rem;
+}
+
+.w-fit {
+  width: -moz-fit-content;
+  width: fit-content;
+}
+
 .cursor-pointer {
   cursor: pointer;
 }
@@ -665,8 +719,16 @@ video {
   grid-template-columns: repeat(4, minmax(0, 1fr));
 }
 
+.grid-cols-3 {
+  grid-template-columns: repeat(3, minmax(0, 1fr));
+}
+
 .grid-rows-2 {
   grid-template-rows: repeat(2, minmax(0, 1fr));
+}
+
+.flex-col {
+  flex-direction: column;
 }
 
 .items-center {
@@ -712,6 +774,22 @@ video {
 .bg-\[white\] {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+
+.bg-\[w--shade-cyan\] {
+  background-color: w--shade-cyan;
+}
+
+.bg-\[--w-shade-cyan\] {
+  background-color: var(--w-shade-cyan);
+}
+
+.bg-\[--w-graywhite\] {
+  background-color: var(--w-graywhite);
+}
+
+.bg-\[--w-clayblack\] {
+  background-color: var(--w-clayblack);
 }
 
 .p-10 {
