--- a/src/tailw.css
+++ b/src/tailw.css
@@ -570,9 +570,32 @@ video {
   top: 15vh;
 }
 
+.m-4 {
+  margin: 1rem;
+}
+
 .mx-auto {
   margin-left: auto;
   margin-right: auto;
+}
+
+.mx-5 {
+  margin-left: 1.25rem;
+  margin-right: 1.25rem;
+}
+
+.mx-2 {
+  margin-left: 0.5rem;
+  margin-right: 0.5rem;
+}
+
+.my-4 {
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+}
+
+.mb-10 {
+  margin-bottom: 2.5rem;
 }
 
 .ml-\[5\%\] {
@@ -587,8 +610,12 @@ video {
   margin-top: 1.25rem;
 }
 
-.mb-10 {
-  margin-bottom: 2.5rem;
+.box-border {
+  box-sizing: border-box;
+}
+
+.block {
+  display: block;
 }
 
 .inline {
@@ -611,18 +638,6 @@ video {
   height: 50%;
 }
 
-.h-4 {
-  height: 1rem;
-}
-
-.h-5 {
-  height: 1.25rem;
-}
-
-.h-\[150vh\] {
-  height: 150vh;
-}
-
 .h-\[15vh\] {
   height: 15vh;
 }
@@ -631,45 +646,53 @@ video {
   height: 40vh;
 }
 
-.h-full {
-  height: 100%;
-}
-
-.h-16 {
-  height: 4rem;
-}
-
-.h-32 {
-  height: 8rem;
-}
-
 .h-fit {
   height: -moz-fit-content;
   height: fit-content;
+}
+
+.h-full {
+  height: 100%;
 }
 
 .h-auto {
   height: auto;
 }
 
-.min-h-\[85vh\] {
-  min-height: 85vh;
+.h-\[200vh\] {
+  height: 200vh;
+}
+
+.h-\[50\%\] {
+  height: 50%;
+}
+
+.h-\[60\%\] {
+  height: 60%;
+}
+
+.h-\[150px\] {
+  height: 150px;
+}
+
+.h-\[40\%\] {
+  height: 40%;
+}
+
+.h-\[100px\] {
+  height: 100px;
 }
 
 .min-h-\[100vh\] {
   min-height: 100vh;
 }
 
-.w-4 {
-  width: 1rem;
+.min-h-\[85vh\] {
+  min-height: 85vh;
 }
 
 .w-4\/5 {
   width: 80%;
-}
-
-.w-5 {
-  width: 1.25rem;
 }
 
 .w-\[10\%\] {
@@ -688,21 +711,25 @@ video {
   width: 90%;
 }
 
+.w-fit {
+  width: -moz-fit-content;
+  width: fit-content;
+}
+
 .w-full {
   width: 100%;
 }
 
-.w-16 {
-  width: 4rem;
+.w-\[150px\] {
+  width: 150px;
 }
 
-.w-32 {
-  width: 8rem;
+.w-\[100px\] {
+  width: 100px;
 }
 
-.w-fit {
-  width: -moz-fit-content;
-  width: fit-content;
+.w-\[40\%\] {
+  width: 40%;
 }
 
 .cursor-pointer {
@@ -715,12 +742,16 @@ video {
           user-select: none;
 }
 
-.grid-cols-4 {
-  grid-template-columns: repeat(4, minmax(0, 1fr));
-}
-
 .grid-cols-3 {
   grid-template-columns: repeat(3, minmax(0, 1fr));
+}
+
+.grid-cols-6 {
+  grid-template-columns: repeat(6, minmax(0, 1fr));
+}
+
+.grid-cols-4 {
+  grid-template-columns: repeat(4, minmax(0, 1fr));
 }
 
 .grid-rows-2 {
@@ -735,6 +766,10 @@ video {
   align-items: center;
 }
 
+.justify-normal {
+  justify-content: normal;
+}
+
 .justify-center {
   justify-content: center;
 }
@@ -743,8 +778,28 @@ video {
   justify-content: space-between;
 }
 
+.justify-around {
+  justify-content: space-around;
+}
+
 .gap-5 {
   gap: 1.25rem;
+}
+
+.gap-12 {
+  gap: 3rem;
+}
+
+.gap-2 {
+  gap: 0.5rem;
+}
+
+.gap-3 {
+  gap: 0.75rem;
+}
+
+.overflow-hidden {
+  overflow: hidden;
 }
 
 .rounded-full {
@@ -755,8 +810,34 @@ video {
   border-width: 2px;
 }
 
+.border-4 {
+  border-width: 4px;
+}
+
+.border-b-4 {
+  border-bottom-width: 4px;
+}
+
+.border-solid {
+  border-style: solid;
+}
+
 .border-\[--w-cyan\] {
   border-color: var(--w-cyan);
+}
+
+.border-white {
+  --tw-border-opacity: 1;
+  border-color: rgb(255 255 255 / var(--tw-border-opacity));
+}
+
+.border-red-600 {
+  --tw-border-opacity: 1;
+  border-color: rgb(220 38 38 / var(--tw-border-opacity));
+}
+
+.bg-\[--w--clayblack\] {
+  background-color: var(--w--clayblack);
 }
 
 .bg-\[--w-black\] {
@@ -765,6 +846,10 @@ video {
 
 .bg-\[--w-cyan\] {
   background-color: var(--w-cyan);
+}
+
+.bg-\[--w-shadecyan\] {
+  background-color: var(--w-shadecyan);
 }
 
 .bg-\[var\(--w-clayblack\)\] {
@@ -776,24 +861,30 @@ video {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
-.bg-\[w--shade-cyan\] {
-  background-color: w--shade-cyan;
-}
-
-.bg-\[--w-shade-cyan\] {
-  background-color: var(--w-shade-cyan);
-}
-
-.bg-\[--w-graywhite\] {
-  background-color: var(--w-graywhite);
-}
-
 .bg-\[--w-clayblack\] {
   background-color: var(--w-clayblack);
 }
 
+.bg-cover {
+  background-size: cover;
+}
+
+.object-contain {
+  -o-object-fit: contain;
+     object-fit: contain;
+}
+
+.object-cover {
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
 .p-10 {
   padding: 2.5rem;
+}
+
+.p-12 {
+  padding: 3rem;
 }
 
 .p-2 {
@@ -806,6 +897,10 @@ video {
 
 .p-4 {
   padding: 1rem;
+}
+
+.p-3 {
+  padding: 0.75rem;
 }
 
 .pr-\[8\%\] {
@@ -833,6 +928,18 @@ video {
 .text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+.shadow-lg {
+  --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.shadow-xl {
+  --tw-shadow: 0 20px 25px -5px rgb(0 0 0 / 0.1), 0 8px 10px -6px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 20px 25px -5px var(--tw-shadow-color), 0 8px 10px -6px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
 .outline-none {
