--- a/WebScraper/src/tailw.css
+++ b/WebScraper/src/tailw.css
@@ -631,8 +631,24 @@ video {
   height: 100%;
 }
 
+.h-\[40\%\] {
+  height: 40%;
+}
+
+.h-\[60\%\] {
+  height: 60%;
+}
+
+.h-\[80\%\] {
+  height: 80%;
+}
+
 .max-h-\[260px\] {
   max-height: 260px;
+}
+
+.max-h-full {
+  max-height: 100%;
 }
 
 .min-h-\[100vh\] {
@@ -670,6 +686,10 @@ video {
 
 .w-full {
   width: 100%;
+}
+
+.w-auto {
+  width: auto;
 }
 
 .cursor-pointer {
