--- a/WebScraper/src/tailw.css
+++ b/WebScraper/src/tailw.css
@@ -566,6 +566,66 @@ video {
   right: 0px;
 }
 
+.top-10 {
+  top: 2.5rem;
+}
+
+.left-0 {
+  left: 0px;
+}
+
+.top-0 {
+  top: 0px;
+}
+
+.top-5 {
+  top: 1.25rem;
+}
+
+.-left-\[400px\] {
+  left: -400px;
+}
+
+.left-\[-100px\] {
+  left: -100px;
+}
+
+.left-\[-200px\] {
+  left: -200px;
+}
+
+.left-\[-300px\] {
+  left: -300px;
+}
+
+.left-4 {
+  left: 1rem;
+}
+
+.left-32 {
+  left: 8rem;
+}
+
+.-left-32 {
+  left: -8rem;
+}
+
+.z-10 {
+  z-index: 10;
+}
+
+.z-20 {
+  z-index: 20;
+}
+
+.-z-10 {
+  z-index: -10;
+}
+
+.m-auto {
+  margin: auto;
+}
+
 .mx-auto {
   margin-left: auto;
   margin-right: auto;
@@ -591,8 +651,32 @@ video {
   margin-top: 1.25rem;
 }
 
+.ml-auto {
+  margin-left: auto;
+}
+
+.mr-5 {
+  margin-right: 1.25rem;
+}
+
+.ml-\[2\%\] {
+  margin-left: 2%;
+}
+
+.box-border {
+  box-sizing: border-box;
+}
+
+.box-content {
+  box-sizing: content-box;
+}
+
 .block {
   display: block;
+}
+
+.inline-block {
+  display: inline-block;
 }
 
 .inline {
@@ -611,6 +695,10 @@ video {
   display: grid;
 }
 
+.hidden {
+  display: none;
+}
+
 .h-1\/2 {
   height: 50%;
 }
@@ -623,6 +711,10 @@ video {
   height: 40%;
 }
 
+.h-\[400px\] {
+  height: 400px;
+}
+
 .h-\[40vh\] {
   height: 40vh;
 }
@@ -633,6 +725,22 @@ video {
 
 .h-full {
   height: 100%;
+}
+
+.h-\[100px\] {
+  height: 100px;
+}
+
+.h-auto {
+  height: auto;
+}
+
+.h-\[200px\] {
+  height: 200px;
+}
+
+.h-\[100vh\] {
+  height: 100vh;
 }
 
 .max-h-\[260px\] {
@@ -659,6 +767,10 @@ video {
   width: 15%;
 }
 
+.w-\[400px\] {
+  width: 400px;
+}
+
 .w-\[70\%\] {
   width: 70%;
 }
@@ -674,6 +786,38 @@ video {
 
 .w-full {
   width: 100%;
+}
+
+.w-\[500px\] {
+  width: 500px;
+}
+
+.w-\[25\%\] {
+  width: 25%;
+}
+
+.w-\[100\%\] {
+  width: 100%;
+}
+
+.w-\[800\%\] {
+  width: 800%;
+}
+
+.w-\[80\%\] {
+  width: 80%;
+}
+
+.w-\[100px\] {
+  width: 100px;
+}
+
+.w-\[5\%\] {
+  width: 5%;
+}
+
+.w-\[12\%\] {
+  width: 12%;
 }
 
 .max-w-full {
@@ -706,6 +850,10 @@ video {
   align-items: center;
 }
 
+.justify-start {
+  justify-content: flex-start;
+}
+
 .justify-center {
   justify-content: center;
 }
@@ -716,6 +864,14 @@ video {
 
 .gap-5 {
   gap: 1.25rem;
+}
+
+.gap-3 {
+  gap: 0.75rem;
+}
+
+.gap-10 {
+  gap: 2.5rem;
 }
 
 .overflow-hidden {
@@ -770,6 +926,11 @@ video {
 .bg-\[white\] {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+
+.bg-red-400 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(248 113 113 / var(--tw-bg-opacity));
 }
 
 .p-10 {
@@ -849,6 +1010,14 @@ video {
 
 .hover\:w-1\/6:hover {
   width: 16.666667%;
+}
+
+.hover\:w-\[8\%\]:hover {
+  width: 8%;
+}
+
+.hover\:w-\[12\%\]:hover {
+  width: 12%;
 }
 
 .hover\:bg-\[rgba\(102\2c 252\2c 241\2c 0\.8\)\]:hover {
