--- a/WebScraper/src/tailw.css
+++ b/WebScraper/src/tailw.css
@@ -566,9 +566,75 @@ video {
   right: 0px;
 }
 
+.-left-12 {
+  left: -3rem;
+}
+
+.-left-\[200px\] {
+  left: -200px;
+}
+
+.top-10 {
+  top: 2.5rem;
+}
+
+.top-5 {
+  top: 1.25rem;
+}
+
+.top-2 {
+  top: 0.5rem;
+}
+
+.top-2\.5 {
+  top: 0.625rem;
+}
+
+.left-\[-220px\] {
+  left: -220px;
+}
+
+.left-0 {
+  left: 0px;
+}
+
+.left-\[-250px\] {
+  left: -250px;
+}
+
+.top-3 {
+  top: 0.75rem;
+}
+
+.top-1 {
+  top: 0.25rem;
+}
+
+.top-0 {
+  top: 0px;
+}
+
+.m-0 {
+  margin: 0px;
+}
+
+.m-4 {
+  margin: 1rem;
+}
+
+.mx-\[5px\] {
+  margin-left: 5px;
+  margin-right: 5px;
+}
+
 .mx-auto {
   margin-left: auto;
   margin-right: auto;
+}
+
+.my-2 {
+  margin-top: 0.5rem;
+  margin-bottom: 0.5rem;
 }
 
 .mb-10 {
@@ -593,6 +659,14 @@ video {
 
 .mt-5 {
   margin-top: 1.25rem;
+}
+
+.ml-0 {
+  margin-left: 0px;
+}
+
+.mt-0 {
+  margin-top: 0px;
 }
 
 .block {
@@ -635,6 +709,18 @@ video {
   height: 100%;
 }
 
+.h-\[120px\] {
+  height: 120px;
+}
+
+.h-5 {
+  height: 1.25rem;
+}
+
+.h-2 {
+  height: 0.5rem;
+}
+
 .max-h-\[260px\] {
   max-height: 260px;
 }
@@ -647,6 +733,10 @@ video {
   min-height: 85vh;
 }
 
+.w-1\/2 {
+  width: 50%;
+}
+
 .w-4\/5 {
   width: 80%;
 }
@@ -657,6 +747,10 @@ video {
 
 .w-\[12\%\] {
   width: 12%;
+}
+
+.w-\[200px\] {
+  width: 200px;
 }
 
 .w-\[25\%\] {
@@ -678,6 +772,18 @@ video {
 
 .w-full {
   width: 100%;
+}
+
+.w-\[230px\] {
+  width: 230px;
+}
+
+.w-5 {
+  width: 1.25rem;
+}
+
+.w-2 {
+  width: 0.5rem;
 }
 
 .max-w-full {
@@ -726,6 +832,10 @@ video {
   gap: 2.5rem;
 }
 
+.gap-2 {
+  gap: 0.5rem;
+}
+
 .gap-3 {
   gap: 0.75rem;
 }
@@ -763,6 +873,16 @@ video {
   border-color: rgb(220 38 38 / var(--tw-border-opacity));
 }
 
+.border-white {
+  --tw-border-opacity: 1;
+  border-color: rgb(255 255 255 / var(--tw-border-opacity));
+}
+
+.border-cyan-400 {
+  --tw-border-opacity: 1;
+  border-color: rgb(34 211 238 / var(--tw-border-opacity));
+}
+
 .bg-\[--w--clayblack\] {
   background-color: var(--w--clayblack);
 }
@@ -788,6 +908,11 @@ video {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
+.bg-blue-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(59 130 246 / var(--tw-bg-opacity));
+}
+
 .p-10 {
   padding: 2.5rem;
 }
@@ -808,8 +933,26 @@ video {
   padding: 1rem;
 }
 
+.py-2 {
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+}
+
+.px-2 {
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
+}
+
 .pr-\[8\%\] {
   padding-right: 8%;
+}
+
+.pt-2 {
+  padding-top: 0.5rem;
+}
+
+.pl-1 {
+  padding-left: 0.25rem;
 }
 
 .text-center {
@@ -834,6 +977,11 @@ video {
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
+.text-black {
+  --tw-text-opacity: 1;
+  color: rgb(0 0 0 / var(--tw-text-opacity));
+}
+
 .outline-none {
   outline: 2px solid transparent;
   outline-offset: 2px;
@@ -841,6 +989,14 @@ video {
 
 .duration-500 {
   transition-duration: 500ms;
+}
+
+.\[color\:green\] {
+  color: green;
+}
+
+.\[color\:rgba\(255\2c 255\2c 255\2c 0\.6\)\] {
+  color: rgba(255,255,255,0.6);
 }
 
 .\[row-gap\:20px\] {
@@ -853,6 +1009,62 @@ video {
   --w-graywhite: #c5c6c7;
   --w-clayblack: #1f2833;
   --w-black: #0b0c10;
+}
+
+.placeholder\:ml-2::-moz-placeholder {
+  margin-left: 0.5rem;
+}
+
+.placeholder\:ml-2::placeholder {
+  margin-left: 0.5rem;
+}
+
+.placeholder\:w-2::-moz-placeholder {
+  width: 0.5rem;
+}
+
+.placeholder\:w-2::placeholder {
+  width: 0.5rem;
+}
+
+.placeholder\:w-5::-moz-placeholder {
+  width: 1.25rem;
+}
+
+.placeholder\:w-5::placeholder {
+  width: 1.25rem;
+}
+
+.placeholder\:w-6::-moz-placeholder {
+  width: 1.5rem;
+}
+
+.placeholder\:w-6::placeholder {
+  width: 1.5rem;
+}
+
+.placeholder\:pl-3::-moz-placeholder {
+  padding-left: 0.75rem;
+}
+
+.placeholder\:pl-3::placeholder {
+  padding-left: 0.75rem;
+}
+
+.placeholder\:pl-2::-moz-placeholder {
+  padding-left: 0.5rem;
+}
+
+.placeholder\:pl-2::placeholder {
+  padding-left: 0.5rem;
+}
+
+.placeholder\:pl-1::-moz-placeholder {
+  padding-left: 0.25rem;
+}
+
+.placeholder\:pl-1::placeholder {
+  padding-left: 0.25rem;
 }
 
 .placeholder\:text-\[--w-clayblack\]::-moz-placeholder {
@@ -874,6 +1086,10 @@ video {
 .hover\:bg-green-500:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(34 197 94 / var(--tw-bg-opacity));
+}
+
+.hover\:bg-opacity-50:hover {
+  --tw-bg-opacity: 0.5;
 }
 
 .hover\:bg-opacity-60:hover {
