--- a/WebScraper/src/tailw.css
+++ b/WebScraper/src/tailw.css
@@ -562,38 +562,6 @@ video {
   position: relative;
 }
 
-.right-0 {
-  right: 0px;
-}
-
-.-left-12 {
-  left: -3rem;
-}
-
-.-left-\[200px\] {
-  left: -200px;
-}
-
-.top-10 {
-  top: 2.5rem;
-}
-
-.top-5 {
-  top: 1.25rem;
-}
-
-.top-2 {
-  top: 0.5rem;
-}
-
-.top-2\.5 {
-  top: 0.625rem;
-}
-
-.left-\[-220px\] {
-  left: -220px;
-}
-
 .left-0 {
   left: 0px;
 }
@@ -602,16 +570,20 @@ video {
   left: -250px;
 }
 
-.top-3 {
-  top: 0.75rem;
-}
-
-.top-1 {
-  top: 0.25rem;
+.right-0 {
+  right: 0px;
 }
 
 .top-0 {
   top: 0px;
+}
+
+.top-5 {
+  top: 1.25rem;
+}
+
+.top-2 {
+  top: 0.5rem;
 }
 
 .m-0 {
@@ -632,9 +604,9 @@ video {
   margin-right: auto;
 }
 
-.my-2 {
-  margin-top: 0.5rem;
-  margin-bottom: 0.5rem;
+.mx-\[1\%\] {
+  margin-left: 1%;
+  margin-right: 1%;
 }
 
 .mb-10 {
@@ -645,12 +617,20 @@ video {
   margin-bottom: 1.25rem;
 }
 
+.ml-0 {
+  margin-left: 0px;
+}
+
 .ml-\[2\%\] {
   margin-left: 2%;
 }
 
 .mr-5 {
   margin-right: 1.25rem;
+}
+
+.mt-0 {
+  margin-top: 0px;
 }
 
 .mt-20 {
@@ -661,16 +641,24 @@ video {
   margin-top: 1.25rem;
 }
 
-.ml-0 {
-  margin-left: 0px;
+.mt-2 {
+  margin-top: 0.5rem;
 }
 
-.mt-0 {
-  margin-top: 0px;
+.mt-1 {
+  margin-top: 0.25rem;
+}
+
+.mr-4 {
+  margin-right: 1rem;
 }
 
 .block {
   display: block;
+}
+
+.inline {
+  display: inline;
 }
 
 .flex {
@@ -709,16 +697,24 @@ video {
   height: 100%;
 }
 
-.h-\[120px\] {
-  height: 120px;
+.h-4\/5 {
+  height: 80%;
+}
+
+.h-\[80px\] {
+  height: 80px;
+}
+
+.h-\[75px\] {
+  height: 75px;
 }
 
 .h-5 {
   height: 1.25rem;
 }
 
-.h-2 {
-  height: 0.5rem;
+.h-10 {
+  height: 2.5rem;
 }
 
 .max-h-\[260px\] {
@@ -753,6 +749,10 @@ video {
   width: 200px;
 }
 
+.w-\[230px\] {
+  width: 230px;
+}
+
 .w-\[25\%\] {
   width: 25%;
 }
@@ -774,16 +774,16 @@ video {
   width: 100%;
 }
 
-.w-\[230px\] {
-  width: 230px;
-}
-
 .w-5 {
   width: 1.25rem;
 }
 
-.w-2 {
-  width: 0.5rem;
+.w-10 {
+  width: 2.5rem;
+}
+
+.w-\[75\%\] {
+  width: 75%;
 }
 
 .max-w-full {
@@ -828,6 +828,10 @@ video {
   justify-content: space-between;
 }
 
+.justify-around {
+  justify-content: space-around;
+}
+
 .gap-10 {
   gap: 2.5rem;
 }
@@ -844,12 +848,24 @@ video {
   gap: 1.25rem;
 }
 
+.gap-1 {
+  gap: 0.25rem;
+}
+
 .overflow-hidden {
   overflow: hidden;
 }
 
 .rounded-full {
   border-radius: 9999px;
+}
+
+.rounded-none {
+  border-radius: 0px;
+}
+
+.rounded-lg {
+  border-radius: 0.5rem;
 }
 
 .border-2 {
@@ -878,11 +894,6 @@ video {
   border-color: rgb(255 255 255 / var(--tw-border-opacity));
 }
 
-.border-cyan-400 {
-  --tw-border-opacity: 1;
-  border-color: rgb(34 211 238 / var(--tw-border-opacity));
-}
-
 .bg-\[--w--clayblack\] {
   background-color: var(--w--clayblack);
 }
@@ -908,9 +919,9 @@ video {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
-.bg-blue-500 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(59 130 246 / var(--tw-bg-opacity));
+.object-contain {
+  -o-object-fit: contain;
+     object-fit: contain;
 }
 
 .p-10 {
@@ -933,14 +944,18 @@ video {
   padding: 1rem;
 }
 
+.px-2 {
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
+}
+
 .py-2 {
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
 }
 
-.px-2 {
-  padding-left: 0.5rem;
-  padding-right: 0.5rem;
+.pl-1 {
+  padding-left: 0.25rem;
 }
 
 .pr-\[8\%\] {
@@ -949,10 +964,6 @@ video {
 
 .pt-2 {
   padding-top: 0.5rem;
-}
-
-.pl-1 {
-  padding-left: 0.25rem;
 }
 
 .text-center {
@@ -972,14 +983,14 @@ video {
   color: var(--w-clayblack);
 }
 
-.text-white {
-  --tw-text-opacity: 1;
-  color: rgb(255 255 255 / var(--tw-text-opacity));
-}
-
 .text-black {
   --tw-text-opacity: 1;
   color: rgb(0 0 0 / var(--tw-text-opacity));
+}
+
+.text-white {
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
 .outline-none {
@@ -987,12 +998,12 @@ video {
   outline-offset: 2px;
 }
 
-.duration-500 {
-  transition-duration: 500ms;
+.filter {
+  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
 }
 
-.\[color\:green\] {
-  color: green;
+.duration-500 {
+  transition-duration: 500ms;
 }
 
 .\[color\:rgba\(255\2c 255\2c 255\2c 0\.6\)\] {
@@ -1009,62 +1020,6 @@ video {
   --w-graywhite: #c5c6c7;
   --w-clayblack: #1f2833;
   --w-black: #0b0c10;
-}
-
-.placeholder\:ml-2::-moz-placeholder {
-  margin-left: 0.5rem;
-}
-
-.placeholder\:ml-2::placeholder {
-  margin-left: 0.5rem;
-}
-
-.placeholder\:w-2::-moz-placeholder {
-  width: 0.5rem;
-}
-
-.placeholder\:w-2::placeholder {
-  width: 0.5rem;
-}
-
-.placeholder\:w-5::-moz-placeholder {
-  width: 1.25rem;
-}
-
-.placeholder\:w-5::placeholder {
-  width: 1.25rem;
-}
-
-.placeholder\:w-6::-moz-placeholder {
-  width: 1.5rem;
-}
-
-.placeholder\:w-6::placeholder {
-  width: 1.5rem;
-}
-
-.placeholder\:pl-3::-moz-placeholder {
-  padding-left: 0.75rem;
-}
-
-.placeholder\:pl-3::placeholder {
-  padding-left: 0.75rem;
-}
-
-.placeholder\:pl-2::-moz-placeholder {
-  padding-left: 0.5rem;
-}
-
-.placeholder\:pl-2::placeholder {
-  padding-left: 0.5rem;
-}
-
-.placeholder\:pl-1::-moz-placeholder {
-  padding-left: 0.25rem;
-}
-
-.placeholder\:pl-1::placeholder {
-  padding-left: 0.25rem;
 }
 
 .placeholder\:text-\[--w-clayblack\]::-moz-placeholder {
@@ -1086,6 +1041,16 @@ video {
 .hover\:bg-green-500:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(34 197 94 / var(--tw-bg-opacity));
+}
+
+.hover\:bg-white:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+
+.hover\:bg-cyan-400:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(34 211 238 / var(--tw-bg-opacity));
 }
 
 .hover\:bg-opacity-50:hover {
