--- a/WebScraper/src/tailw.css
+++ b/WebScraper/src/tailw.css
@@ -16,7 +16,7 @@
   /* 2 */
   border-style: solid;
   /* 2 */
-  border-color: #e5e7eb;
+  border-color: currentColor;
   /* 2 */
 }
 
@@ -562,6 +562,10 @@ video {
   position: relative;
 }
 
+.sticky {
+  position: sticky;
+}
+
 .left-0 {
   left: 0px;
 }
@@ -574,8 +578,16 @@ video {
   right: 0px;
 }
 
+.top-0 {
+  top: 0px;
+}
+
 .top-2 {
   top: 0.5rem;
+}
+
+.z-10 {
+  z-index: 10;
 }
 
 .m-0 {
@@ -586,9 +598,9 @@ video {
   margin: 1rem;
 }
 
-.mx-\[1\%\] {
-  margin-left: 1%;
-  margin-right: 1%;
+.mx-\[2\%\] {
+  margin-left: 2%;
+  margin-right: 2%;
 }
 
 .mx-auto {
@@ -630,6 +642,14 @@ video {
 
 .mt-5 {
   margin-top: 1.25rem;
+}
+
+.mt-10 {
+  margin-top: 2.5rem;
+}
+
+.mt-7 {
+  margin-top: 1.75rem;
 }
 
 .block {
@@ -684,6 +704,14 @@ video {
   height: 100%;
 }
 
+.h-\[50\%\] {
+  height: 50%;
+}
+
+.h-\[45\%\] {
+  height: 45%;
+}
+
 .max-h-\[260px\] {
   max-height: 260px;
 }
@@ -694,10 +722,6 @@ video {
 
 .min-h-\[85vh\] {
   min-height: 85vh;
-}
-
-.w-1\/2 {
-  width: 50%;
 }
 
 .w-10 {
@@ -759,8 +783,16 @@ video {
   grid-template-columns: repeat(5, minmax(0, 1fr));
 }
 
+.grid-cols-4 {
+  grid-template-columns: repeat(4, minmax(0, 1fr));
+}
+
 .grid-rows-3 {
   grid-template-rows: repeat(3, minmax(0, 1fr));
+}
+
+.grid-rows-5 {
+  grid-template-rows: repeat(5, minmax(0, 1fr));
 }
 
 .flex-col {
@@ -803,6 +835,10 @@ video {
   gap: 1.25rem;
 }
 
+.gap-7 {
+  gap: 1.75rem;
+}
+
 .overflow-hidden {
   overflow: hidden;
 }
@@ -813,6 +849,19 @@ video {
 
 .rounded-lg {
   border-radius: 0.5rem;
+}
+
+.rounded-sm {
+  border-radius: 0.125rem;
+}
+
+.rounded-md {
+  border-radius: 0.375rem;
+}
+
+.rounded-s {
+  border-start-start-radius: 0.25rem;
+  border-end-start-radius: 0.25rem;
 }
 
 .border-2 {
@@ -827,43 +876,55 @@ video {
   border-style: solid;
 }
 
-.border-\[--w-cyan\] {
-  border-color: var(--w-cyan);
+.border-\[transparent\] {
+  border-color: transparent;
 }
 
-.border-red-600 {
+.border-cyan {
   --tw-border-opacity: 1;
-  border-color: rgb(220 38 38 / var(--tw-border-opacity));
+  border-color: rgb(102 252 241 / var(--tw-border-opacity));
 }
 
-.border-white {
+.border-topaz {
   --tw-border-opacity: 1;
-  border-color: rgb(255 255 255 / var(--tw-border-opacity));
+  border-color: rgb(255 191 120 / var(--tw-border-opacity));
 }
 
 .bg-\[--w--clayblack\] {
   background-color: var(--w--clayblack);
 }
 
-.bg-\[--w-black\] {
-  background-color: var(--w-black);
-}
-
 .bg-\[--w-clayblack\] {
   background-color: var(--w-clayblack);
-}
-
-.bg-\[--w-cyan\] {
-  background-color: var(--w-cyan);
 }
 
 .bg-\[--w-shadecyan\] {
   background-color: var(--w-shadecyan);
 }
 
-.bg-\[white\] {
+.bg-orange {
   --tw-bg-opacity: 1;
-  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+  background-color: rgb(255 125 41 / var(--tw-bg-opacity));
+}
+
+.bg-peach {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 238 169 / var(--tw-bg-opacity));
+}
+
+.bg-topaz {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 191 120 / var(--tw-bg-opacity));
+}
+
+.bg-white {
+  --tw-bg-opacity: 1;
+  background-color: rgb(254 255 210 / var(--tw-bg-opacity));
+}
+
+.bg-cyan {
+  --tw-bg-opacity: 1;
+  background-color: rgb(102 252 241 / var(--tw-bg-opacity));
 }
 
 .object-contain {
@@ -912,22 +973,36 @@ video {
   line-height: 2rem;
 }
 
+.text-4xl {
+  font-size: 2.25rem;
+  line-height: 2.5rem;
+}
+
+.text-3xl {
+  font-size: 1.875rem;
+  line-height: 2.25rem;
+}
+
 .font-semibold {
   font-weight: 600;
 }
 
-.text-\[--w-clayblack\] {
-  color: var(--w-clayblack);
-}
-
 .text-black {
   --tw-text-opacity: 1;
-  color: rgb(0 0 0 / var(--tw-text-opacity));
+  color: rgb(11 12 16 / var(--tw-text-opacity));
+}
+
+.text-gray {
+  color: #0b0c10AA;
 }
 
 .text-white {
   --tw-text-opacity: 1;
-  color: rgb(255 255 255 / var(--tw-text-opacity));
+  color: rgb(254 255 210 / var(--tw-text-opacity));
+}
+
+.text-opacity-50 {
+  --tw-text-opacity: 0.5;
 }
 
 .outline-none {
@@ -939,16 +1014,20 @@ video {
   filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
 }
 
+.duration-1000 {
+  transition-duration: 1000ms;
+}
+
 .duration-500 {
   transition-duration: 500ms;
 }
 
-.\[color\:rgba\(255\2c 255\2c 255\2c 0\.6\)\] {
-  color: rgba(255,255,255,0.6);
-}
-
 .\[row-gap\:20px\] {
   row-gap: 20px;
+}
+
+.\[row-gap\:40px\] {
+  row-gap: 40px;
 }
 
 :root {
@@ -959,43 +1038,74 @@ video {
   --w-black: #0b0c10;
 }
 
-.placeholder\:text-\[--w-clayblack\]::-moz-placeholder {
-  color: var(--w-clayblack);
+.placeholder\:text-gray::-moz-placeholder {
+  color: #0b0c10AA;
 }
 
-.placeholder\:text-\[--w-clayblack\]::placeholder {
-  color: var(--w-clayblack);
+.placeholder\:text-gray::placeholder {
+  color: #0b0c10AA;
 }
 
-.hover\:w-\[12\%\]:hover {
-  width: 12%;
+.hover\:h-10:hover {
+  height: 2.5rem;
 }
 
-.hover\:bg-\[rgba\(102\2c 252\2c 241\2c 0\.8\)\]:hover {
-  background-color: rgba(102,252,241,0.8);
+.hover\:h-7:hover {
+  height: 1.75rem;
 }
 
-.hover\:bg-cyan-400:hover {
+.hover\:bg-orange:hover {
   --tw-bg-opacity: 1;
-  background-color: rgb(34 211 238 / var(--tw-bg-opacity));
+  background-color: rgb(255 125 41 / var(--tw-bg-opacity));
 }
 
-.hover\:bg-green-500:hover {
+.hover\:bg-peach:hover {
   --tw-bg-opacity: 1;
-  background-color: rgb(34 197 94 / var(--tw-bg-opacity));
+  background-color: rgb(255 238 169 / var(--tw-bg-opacity));
 }
 
-.hover\:bg-opacity-50:hover {
-  --tw-bg-opacity: 0.5;
+.hover\:bg-white:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(254 255 210 / var(--tw-bg-opacity));
+}
+
+.hover\:bg-cyan:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(102 252 241 / var(--tw-bg-opacity));
+}
+
+.hover\:bg-topaz:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 191 120 / var(--tw-bg-opacity));
+}
+
+.hover\:bg-gray:hover {
+  background-color: #0b0c10AA;
 }
 
 .hover\:bg-opacity-60:hover {
   --tw-bg-opacity: 0.6;
 }
 
-.hover\:text-white:hover {
+.hover\:bg-opacity-50:hover {
+  --tw-bg-opacity: 0.5;
+}
+
+.hover\:bg-opacity-75:hover {
+  --tw-bg-opacity: 0.75;
+}
+
+.hover\:bg-opacity-90:hover {
+  --tw-bg-opacity: 0.9;
+}
+
+.hover\:bg-opacity-20:hover {
+  --tw-bg-opacity: 0.2;
+}
+
+.hover\:text-black:hover {
   --tw-text-opacity: 1;
-  color: rgb(255 255 255 / var(--tw-text-opacity));
+  color: rgb(11 12 16 / var(--tw-text-opacity));
 }
 
 .hover\:shadow-lg:hover {
@@ -1004,7 +1114,17 @@ video {
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
-.hover\:shadow-lime-600:hover {
-  --tw-shadow-color: #65a30d;
+.hover\:shadow-white:hover {
+  --tw-shadow-color: #FEFFD2;
+  --tw-shadow: var(--tw-shadow-colored);
+}
+
+.hover\:shadow-\[green\]:hover {
+  --tw-shadow-color: green;
+  --tw-shadow: var(--tw-shadow-colored);
+}
+
+.hover\:shadow-cyan:hover {
+  --tw-shadow-color: #66fcf1;
   --tw-shadow: var(--tw-shadow-colored);
 }
